@@ -99,20 +99,22 @@
 <div *ngIf="selectedTab === 'wait_for_approval' && !loading.isRunning() && !store?.defaultSetting?.isPublicReceivable">
     <p class="mb-0 font-9 text-muted py-2">You have disabled to receive orders publicly.</p>
 </div>
-<div *ngIf="selectedTab != 'delivered' && selectedTab !== 'in_progress' && selectedTab !== 'ready'">
+<div *ngIf="selectedTab != 'delivered' && selectedTab !== 'in_progress' && selectedTab !== 'ready' && selectedTab !== 'completed'">
     <div class="row no-gutters mb-5 pb-3" *ngIf="allInvoices?.length && !loading.isRunning(); else loadingTemplate">
         <div class="col-lg-5ths col-md-4 col-sm-6 p-sm-2 py-2" *ngFor="let invoice of allInvoices; trackBy: trackInvoiceId">
             <ws-invoice-card [item]="invoice" [onInvoiceInfoModalClick]="openEditInvoiceModal.bind(this, invoice)"></ws-invoice-card>
         </div>
     </div>
 </div>
-<div *ngIf="selectedTab == 'delivered' || selectedTab == 'in_progress' || selectedTab == 'ready'">
+<div *ngIf="selectedTab == 'delivered' || selectedTab == 'in_progress' || selectedTab == 'ready' || selectedTab == 'completed'">
     <div class="row no-gutters mb-5 pb-3" *ngIf="invoiceGroups?.length && !loading.isRunning(); else loadingTemplate">
         <div class="invoice-group-container mb-2" *ngFor="let data of invoiceGroups;">
             <ng-container *ngIf="data?.numberOfInvoices > 0">
                 <p class="mb-0 p-2 font-8" style="color: #5e6c84" (click)="onDateGroupClicked(data?._id)">
-                    <span *ngIf="data?._id !== 'Others'">{{data?._id | date:'yyy-MMM-dd (EEE)'}}</span>
-                    <span *ngIf="data?._id === 'Others'">Others</span>
+                    <span *ngIf="data?._id !== 'Others'">
+                        {{ selectedTab === 'completed' ? '' : 'ETA: '}}{{data?._id | date:'yyy-MMM-dd (EEE)'}}</span>
+                    <span *ngIf="data?._id === 'Others'">
+                        {{ selectedTab === 'completed' ? '' : 'ETA: '}}Others</span>
                     <span class="float-right">Total: {{data?.numberOfInvoices }}</span>
                 </p>
                 <div class="row no-gutters" [hidden]="selectedDate !== data?._id">
@@ -129,7 +131,7 @@
         </div>
     </div>
 </div>
-<ws-pagination *ngIf="numberOfCurrentTotalItems && selectedTab != 'delivered' && selectedTab !== 'in_progress' && selectedTab !== 'ready'" [expanded]="isNavOpen" [currentPage]="page"
+<ws-pagination *ngIf="numberOfCurrentTotalItems && selectedTab != 'delivered' && selectedTab !== 'in_progress' && selectedTab !== 'ready' && selectedTab !== 'completed'" [expanded]="isNavOpen" [currentPage]="page"
             [pageSize]="50" [dbTotal]="numberOfAllItems" [total]="numberOfCurrentTotalItems" (getPageNumber)="navigate($event)"></ws-pagination>
 
 <ng-template #loadingTemplate>
