@@ -4,6 +4,11 @@
 
 - v1.0.1092                                 -
 ---------------------------------------------
+- 2021-05-09                                -
+---------------------------------------------
+.: WSM: Task: Group completed invoices (WSM-339)
+
+---------------------------------------------
 - 2021-05-08                                -
 ---------------------------------------------
 .: WSM: Task: Update invoice-setup to show check (WSM-232)
